[package]
name = "shoppinglist"
version = "0.1.0"
authors = ["Nexuz <nexxuz0@googlemail.com>"]
edition = "2018"

[dependencies]
telegram-bot = { git = "https://github.com/Nexus87/telegram-bot" }
tokio = { version = "0.2", features = ["macros"] }
futures = "0.3"
todoist = { version = "=0.1.0", path = "../todoist" }
serde = "1.0.104"
serde_json = "1.0.45"
byteorder = "1.3.1"
sled = "0.23.0"
failure = "0.1.5"
log = "0.4.6"
simplelog = "0.5.3"
bincode = "1.1.3"
warp = "0.2.1"
hyper = "0.13"
async-trait = "0.1.42"
