[package]
name = "shoppinglist"
version = "0.1.0"
authors = ["Nexuz <nexxuz0@googlemail.com>"]
edition = "2018"

[dependencies]
telegram-bot = { git = "https://github.com/Nexus87/telegram-bot", branch = "next" }
tokio = { version = "1.0", features = ["macros"] }
futures = "0.3"
todoist = { version = "=0.1.0", path = "../todoist" }
serde = "1.0.104"
serde_json = "1.0.45"
byteorder = "1.3.1"
sled = "0.23.0"
failure = "0.1.5"
log = "0.4.6"
simplelog = "0.5.3"
bincode = "1.1.3"
hyper = "0.14"
async-trait = "0.1.42"
actix-web = "4.0.0-beta.1"
regex = "1.4.3"
lazy_static = "1.4.0"
