[package]
name = "shoppinglist"
version = "0.1.0"
authors = ["Nexuz <nexxuz0@googlemail.com>"]
edition = "2021"

[dependencies]
telegram-bot = { git = "https://github.com/Nexus87/telegram-bot" }
tokio = "1.22.0"
futures = "0.3.25"
todoist = { version = "=0.1.0", path = "../todoist" }
serde = "1.0.84"
serde_json = "1.0.35"
byteorder = "1.3.1"
sled = "0.34.7"
failure = "0.1.5"
log = "0.4.6"
simplelog = "0.12.0"
bincode = "1.1.3"
actix-web = "4"
