[package]
name = "todoist"
version = "0.1.0"
authors = ["Nexuz <nexxuz0@googlemail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.0", features = ["macros"] }
futures = "0.3"
serde = "1.0.104"
serde_json = "1.0.45"
serde_derive = "1.0.104"
hyper = { version ="0.14", features = ["full"] }
hyper-tls = "0.5"
bytes = "0.5"
uuid = { version = "0.7", features = ["serde", "v4"] }
