[package]
name = "todoist"
version = "0.1.0"
authors = ["Nexuz <nexxuz0@googlemail.com>"]
edition = "2021"

[dependencies]
tokio = "1.22.0"
futures = "0.3.25"
serde = "1.0.84"
serde_json = "1.0.34"
serde_derive = "1.0.84"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
actix = "0.13.0"
async-trait = "0.1.58"